refactor: 클래스패스 리소스 접근 방식 변경